fix button visibility issue

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -96,7 +96,7 @@ App
 h1, h2, h3
   @include myriad()
 .filterBtn
-  @include lato()
+  @include myriad()
   background-color: $navy
   color: white
   font-size: 1.5vh
